                pushed back) input characters;
            void Input::setPending(size_t size) 
                must remove the initial number of pending characters, reducing
                the number of pending characters to size.
            The lexical scanner always passes the value received from
            nPending() to setPending(), without calling Input::get() in
            between.

  * A second %% line in flexc++'s input file ends input file processing.
    To specify a regex starting with %% surround it with double quotes or 
    indent it by at least one blank space.

  * Repaired a bug introduced in 1.02, causing parser failures for letter and
    digits in REs in the context of start conditions. Cause: after '>' in
    parser/inc/msspec multiple letters/digits must be returned as individual
    characters. Realized by calling d_scanner.multiAsChar() at ms_spec's
    action block.

  * Null-matching regular expressions (i.e., regular expressions that may not
    match any characters) are potentially dangerous as they may cause
    continuous loops (e.g. a*/b, with input b). A warning is generated when
    such regexes are encountered. The warning can be prevented by preceding
    them with a line merely containing //%nowarn. 

  * Raw string literals, as defined by C++11, are supported

  * Added several new regression tests 


    
flexc++ (1.08.00)

  * Added the 'postCode' member to the interface of the class generated by
    flexc++

  * Added the strongly typed PostEnum__ enumeration to the scanner base class
    generated by flexc++

  * Added a chapter `Pre-loading input lines' to the manual

  * The single flexc++ man-page was split into several more specific
    man-pages: 
        flexc++      -- general description, and features of flexc++ itself
        flexc++input -- how to write flexc++'s input files
        flexc++api   -- description of the classes generated by flexc++
        