@@ -2,9 +2,6 @@
 
 CharClass CharClass::elements(string const &chars, size_t skip)
 {
-    CharClass ret(skip == 0 ? chars : chars.substr(skip));
-
-//cout << "CharClass::elements: " << ret << '\n';
-
+    CharClass ret(String::unescape(skip == 0 ? chars : chars.substr(skip)));
     return ret;
 }
