@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.05.00 on Thu, 06 Feb 2014 15:51:35 +0100
+// Generated by Bisonc++ V4.05.00 on Thu, 06 Feb 2014 17:51:47 +0100
 
 // $insert class.ih
 #include "parser.ih"
@@ -2914,7 +2914,7 @@ try
         case 94:
 #line 83 "inc/characterclass"
         {
-         d_val__.get<Tag__::CHARCLASS>() = CharClass::escapeSequence(d_matched);
+         d_val__.get<Tag__::CHARCLASS>() = CharClass::escape(d_matched);
          }
         break;
 
